--- a/testered/pubspec.yaml
+++ b/testered/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.6.5
+  google_fonts: ^6.2.1
+  charts_flutter: ^0.12.0
+  data_table_2: ^2.5.15
 
 
   # The following adds the Cupertino Icons font to your application.
