--- a/testered/pubspec.yaml
+++ b/testered/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   google_fonts: ^6.2.1
   charts_flutter: ^0.12.0
   data_table_2: ^2.5.15
+  sqflite: ^2.0.0+4
+  path: ^1.8.0
 
 
   # The following adds the Cupertino Icons font to your application.
