--- a/testered/pubspec.yaml
+++ b/testered/pubspec.yaml
@@ -45,6 +45,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  #stacked state management:
+  stacked: ^2.1.0
+  stacked_services: ^0.8.0-nullsafety.1
+
+  #data models
+  freezed_annotation: ^0.14.1
+  json_annotation: ^4.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -58,6 +66,10 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
 
+  stacked_generator: ^0.4.1
+  #data models
+  freezed: ^0.14.1+2
+  json_serializable: ^4.1.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
