--- a/testered/pubspec.yaml
+++ b/testered/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   data_table_2: ^2.5.15
   hive: ^2.0.5  # Hive package
   hive_flutter: ^1.1.0
+  provider: ^6.1.2
 #  sqflite: ^2.0.0+4
 #  path: ^1.8.0
 #  sqflite_common_ffi: ^2.0.0+1  # Add this for FFI support on desktop
