--- a/testered/pubspec.yaml
+++ b/testered/pubspec.yaml
@@ -50,14 +50,16 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.1.0  # Add build_runner here
-  hive_generator: ^1.1.0
+  hive_generator: ^2.0.1
+#  test: ^1.16.0
+  test: ^1.25.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
