--- a/testered/pubspec.yaml
+++ b/testered/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.0.16
   build_runner: ^2.1.0  # Add build_runner here
   hive_generator: ^2.0.1
 #  test: ^1.16.0
