--- a/testered/pubspec.yaml
+++ b/testered/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.0.11
   pdf: ^3.6.0
   printing: ^5.10.0
+  open_file: ^3.2.1+1
   #  sqflite: ^2.0.0+4
 #  path: ^1.8.0
 #  sqflite_common_ffi: ^2.0.0+1  # Add this for FFI support on desktop
