--- a/testered/pubspec.yaml
+++ b/testered/pubspec.yaml
@@ -37,9 +37,10 @@ dependencies:
   hive: ^2.0.5  # Hive package
   hive_flutter: ^1.1.0
   provider: ^6.1.2
+  universal_html: ^2.0.6
   csv: ^5.0.0
-  path_provider: ^2.0.11
   pdf: ^3.6.0
+  intl: ^0.17.0
   printing: ^5.10.0
   open_file: ^3.2.1+1
   #  sqflite: ^2.0.0+4
