--- a/testered/pubspec.yaml
+++ b/testered/pubspec.yaml
@@ -59,7 +59,7 @@ dev_dependencies:
   build_runner: ^2.1.0  # Add build_runner here
   hive_generator: ^2.0.1
 #  test: ^1.16.0
-  test: ^1.25.7
+#  test: ^1.25.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
