--- a/testered/pubspec.yaml
+++ b/testered/pubspec.yaml
@@ -55,11 +55,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^5.0.16
   build_runner: ^2.1.0  # Add build_runner here
   hive_generator: ^2.0.1
-#  test: ^1.16.0
-#  test: ^1.25.7
+  test: ^1.25.7
+  mockito: ^5.0.16
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
