--- a/testered/pubspec.yaml
+++ b/testered/pubspec.yaml
@@ -46,30 +46,30 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   #stacked state management:
-  stacked: ^2.1.0
-  stacked_services: ^0.8.0-nullsafety.1
+  stacked: ^3.4.3
+  stacked_services: ^1.6.0
 
   #data models
-  freezed_annotation: ^0.14.1
+  freezed_annotation: ^2.4.4
   json_annotation: ^4.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.1.0  # Add build_runner here
-  hive_generator: ^1.1.0
-
+  hive_generator: ^2.0.1
+  test: ^1.25.7
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
-  stacked_generator: ^0.4.1
+  stacked_generator: ^1.6.1
   #data models
-  freezed: ^0.14.1+2
-  json_serializable: ^4.1.0
+  freezed: ^2.5.7
+  json_serializable: ^6.9.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
